--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,6 @@
 pandoc: 2.3.1
 pkgdown: 1.3.0.9000
 pkgdown_sha: 59cc923c953d483091aae2b6b626b195674efb5f
-articles: []
+articles:
+  kh3d: kh3d.html
 
